--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "firebase": "^12.6.0",
     "mysql2": "^3.15.3",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react-dom": "^19.2.1",
     "react-hot-toast": "^2.6.0",
-    "react-router-dom": "^7.9.6",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.10.1",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
